src/test/ui/proc-macro/proc-macro-gates2.stderr
error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-gates2.rs:12:11
   |
LL | fn _test6<#[empty_attr] T>() {}
   |           ^^^^^^^^^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-gates2.rs:17:9
   |
LL |         #[empty_attr]
   |         ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

